fix align of selected tab

--- a/src/scss/partials/_block.scss
+++ b/src/scss/partials/_block.scss
@@ -463,7 +463,7 @@
 
   &--selected {
     background: blue;
-    padding: 12px 30px;
+    padding: 12px 0px;
     margin-top: 0px;
   }
 
